fixed header not working on mobile

--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -6,6 +6,7 @@
   //border-bottom: 1px solid $grey-color-light;
   min-height: $spacing-unit * 1.865;
   padding: 0.5rem;
+  z-index: 1005;
   background-color: #FFDE59;
   // Positioning context for the mobile navigation icon
   position: relative;
@@ -268,6 +269,21 @@
 
     }
 
+    /* Add to your _layout.scss */
+.menu-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  display: none;
+  z-index: 1003; /* Lower than header but higher than page content */
+}
+
+.nav-trigger:checked ~ .menu-overlay {
+  display: block;
+}
+
     .menu-icon {
       display: block;
       float: right;
@@ -288,7 +304,12 @@
       border: 1px solid $grey-color-light;
       padding-bottom: 10px;
       padding-top: 10px;
+      z-index: 1004;
       animation: fadeIn 0.5s ease-in;
+      position: relative;
+      z-index: 1004;
+      background-color: #FFDE59;
+    
     }
 
     @keyframes fadeIn {
